# web-dev-server

./: AGENTS.md  Cargo.toml  README.md
src/: cli.rs  config.rs  internal_scope.rs  lib.rs  main.rs  startup.rs
src/js/: script.js
