[package]
name = "web-dev-server"
version = "0.1.0"
edition = "2024"
description = "An very simple live reload server for frontend development"
license = "GPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "sync",
] }
anyhow = "1"
actix-web = "4"
actix-files = "0.6"
clap = { version = "4", features = ["derive"] }
actix-ws = "0.3.0"
notify = "8.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
owo-colors = "4"
open = "5"
